--- a/lab 01/worley-bio.html
+++ b/lab 01/worley-bio.html
@@ -8,6 +8,7 @@
         </head>
 
         <body>
+            <img src="..\Capture.PNG" alt="me">    
        <h1> Gabriel Worley's Biography</h1>
            
      <p> I am a data science major, <strong> Commodore 64</strong>  and I am interested in cyber security. I graduated dean’s list from my last college, and I am also in the Army. Outside of school, I do not do much. I like to go to the gym regularly and read books. 
