--- a/lab 01/worley-bio.html
+++ b/lab 01/worley-bio.html
@@ -8,6 +8,7 @@
         </head>
 
         <body>
+            <a href="..\images\Capture.PNG">My photo</a>
             <img src="..\images\Capture.PNG" alt="me">    
        <h1> Gabriel Worley's Biography</h1>
            
