--- a/lab 01/worley-bio.html
+++ b/lab 01/worley-bio.html
@@ -7,8 +7,8 @@
             <title>Gabriel Worley - Bio</title>
         </head>
        
-        <a href="images\Capture.PNG">My photo</a>
-        <img src="images\Capture.PNG" alt="me">  
+        <a href="..\images\Capture.PNG">My photo</a>
+        <img src="..\images\Capture.PNG" alt="me">  
 
         <body>  
        <h1> Gabriel Worley's Biography</h1>
