--- a/Lab06/worley-bio.html
+++ b/Lab06/worley-bio.html
@@ -6,7 +6,7 @@
 
             <meta charset = "utf-8">
             <title>Gabriel Worley - Bio</title>
-            <link rel="stylesheet" href="Lab06\styles.css">
+            <link rel="stylesheet" href="..\styles.css">
         </head>
        
         <a href="..\images\Capture.PNG">My photo</a>
